@@ -1,0 +1,14 @@
+def ex1():
+    import basic_example1
+
+def ex2():
+    import basic_example2
+
+def ex3():
+    import basic_example3
+
+if __name__ == '__main__':
+    ex1()
+    ex2()
+    ex3()
+
